--- a/senpick/app/templates/signup/signup_step1.html
+++ b/senpick/app/templates/signup/signup_step1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="signup-container">
-    <div class="signup-form-area">
+    <div class="signup-form-area step1">
 
       <!-- 1) 로고 -->
       <img src="{% static 'images/senpick_logo.svg' %}"
