--- a/senpick/app/templates/signup/signup_step1.html
+++ b/senpick/app/templates/signup/signup_step1.html
@@ -13,7 +13,8 @@
 </head>
 <body>
   <div class="signup-container">
-    <div class="signup-form-area step1">
+    <form method="POST" action="{% url 'signup_step1' %}" class="signup-form-area step1">
+    {% csrf_token %}
 
       <!-- 1) 로고 -->
       <img src="{% static 'images/senpick_logo.svg' %}"
@@ -33,20 +34,20 @@
 
       <!-- 4) 이메일 -->
       <label for="email" class="label-email">이메일</label>
-      <input type="email" id="email" class="input-email"
+      <input type="email" id="email" name="email" class="input-email"
              placeholder="이메일 입력 (예: senpick@senpick.com)">
       <!-- 이메일 에러 메시지 -->
       <div id="email-error" class="error-message"></div>
 
       <!-- 5) 비밀번호 -->
       <label for="password" class="label-password">비밀번호</label>
-      <input type="password" id="password" class="input-password"
+      <input type="password" id="password" name="password" class="input-password"
              placeholder="비밀번호 입력">
       <div id="password-error" class="error-message"></div>
 
       <!-- 6) 닉네임 -->
       <label for="nickname" class="label-nickname">닉네임</label>
-      <input type="text" id="nickname" class="input-nickname"
+      <input type="text" id="nickname" name="nickname" class="input-nickname"
              placeholder="한글만 최대 8자">
       <div id="nickname-error" class="error-message"></div>
 
@@ -82,7 +83,7 @@
       <!-- 약관 오류 메시지 -->
       <div id="terms-error" class="error-message"></div>
       <!-- 9) 다음 단계 버튼 -->
-      <button id="nextBtn" class="next-btn active">다음 단계</button>
+      <button type="submit" id="nextBtn" class="next-btn active">다음 단계</button>
 
       <!-- 서비스 이용약관 모달 -->
       <div id="serviceModal" class="modal-overlay">
@@ -110,7 +111,7 @@
         </div>
       </div>
 
-    </div><!-- /.signup-form-area -->
+    </form><!-- /.signup-form-area -->
     <!-- 오른쪽 슬라이드 포함 -->
     <div class="signup-visual">
       {% include "slide.html" %}
