--- a/senpick/app/templates/layout/sidebar.html
+++ b/senpick/app/templates/layout/sidebar.html
@@ -38,10 +38,10 @@
   </div>
   <!-- 하단: 마이페이지/브랜드바 -->
   <div class="sidebar-bottom">
-    <div class="menu-btn-row" id="my-btn">
+    <a href="{% url 'mypage' %}" class="menu-btn-row">
       <img src="{% static 'images/settings.svg' %}" alt="Settings">
       <span class="btn-label">My Page</span>
-    </div>
+    </a>
     {% comment %} <div class="mypage-row">
       <img src="{% static 'images/Settings.png' %}" alt="설정">
       <span>My Page</span>
@@ -62,22 +62,6 @@
       "글자몇개를넣으면좋을까요",
       "공백포함11글자가능하다",
       "귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
-      "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
       "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
       "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물",
       "귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물 귀엽고 실용적인 친구 선물"
