--- a/senpick/static/css/slide.css
+++ b/senpick/static/css/slide.css
@@ -4,25 +4,27 @@
 }
 
 .right-slide {
-  position: absolute;
+  position: relative;
+  /* position: absolute; */
   /* left: 912px;
   top: 27px;
   width: 964px;
   height: 1025px; */
-  top: 0;
-  left: 0;       /* 912px → 0 */
+  /* top: 0; */
+  /* left: 0;        */
+  /* 912px → 0 */
   width: 100%;   /* 964px → 100% */
   height: 100%;  /* 1025px → 100% */
-  overflow: hidden;
-  z-index: 1;
+  overflow: visible;
+  z-index: 0;
 }
 
 .slider-wrapper {
+  background-color: #FFFDE7;
   display: flex;
   flex-direction: row;
   width: max-content;
-  height: 100%;
-
+  height: 200vh;
   transition: transform 1s ease-in-out; 
 }
 
