--- a/senpick/static/css/slide.css
+++ b/senpick/static/css/slide.css
@@ -16,7 +16,7 @@
   width: 100%;   /* 964px → 100% */
   height: 100%;  /* 1025px → 100% */
   overflow: visible;
-  z-index: 0;
+  z-index: 1;
 }
 
 .slider-wrapper {
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: row;
   width: max-content;
-  height: 200vh;
+  height: 100%;
   transition: transform 1s ease-in-out; 
 }
 
