--- a/senpick/app/templates/slide.html
+++ b/senpick/app/templates/slide.html
@@ -1,5 +1,4 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
 <link rel="stylesheet" href="{% static 'css/slide.css' %}">
 <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
@@ -7,9 +6,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Spoqa+Han+Sans+Neo:wght@400;500;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cafe24+Supermagic&display=swap" rel="stylesheet">
 <script src="{% static 'js/slide.js' %}" defer></script>
-<div class='right-slide'>
+<div class='right-slide' style="z-index: 0;">
   <div class='slider-wrapper' id='slider'>
-
     <div class='slide-content slide-1'>
       <h2><span class='font-a'>“무슨 선물을 해야 할까?” <br>그 고민, </span><span class='font-b'>Senpick</span><span class='font-a'>이 줄여줄게요.</span></h2>
       <p><span class='font-a'>기쁜 날, 위로가 필요한 날, 마음을 전하고 싶은 날.<br></span>
