--- a/senpick/static/css/stepper.css
+++ b/senpick/static/css/stepper.css
@@ -34,7 +34,7 @@ body {
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 4px 18px rgba(44,44,44,0.10);
-  padding: 22px 22px 20px 22px;
+  padding: 22px;
   margin: 0 auto 18px auto;
   animation: fadeIn 0.4s;
   margin-right: auto;
@@ -63,10 +63,10 @@ body {
 
 /* 옵션 리스트 */
 .step-options {
-  margin-bottom: 14px;
+  /* margin-bottom: 14px; */
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  /* gap: 8px; */
 }
 
 /* 옵션(체크/라벨) */
