--- a/senpick/app/templates/birth.html
+++ b/senpick/app/templates/birth.html
@@ -36,8 +36,9 @@
         </div>
         <script>
             document.addEventListener("DOMContentLoaded", () => {
+                const cardWrapper = document.querySelector(".card-wrapper");
                 for (let i = 0; i < 4; i++) {
-                    createProductCard({
+                    createProductCard(cardWrapper, {
                         imageUrl: 'https://shop-phinf.pstatic.net/20250317_133/1742177290390KwLPy_JPEG/6979889503620148_1772200239.jpg?type=m510',
                         brand: '브랜드명',
                         title: '삼성공식파트너 JBL FLIP6 휴대용 캠핑 피크닉 무선...',
