--- a/senpick/app/templates/sidebar.html
+++ b/senpick/app/templates/sidebar.html
@@ -31,18 +31,12 @@
   </div>
   <!-- 하단: 마이페이지/브랜드바 -->
   <div class="sidebar-bottom">
-    <a href="{% url 'mypage' %}" class="menu-btn-row">
-      <img src="{% static 'images/settings.svg' %}" alt="Settings">
-      <span class="btn-label">My Page</span>
-    </a>
-    {% comment %} <div class="mypage-row">
-      <img src="{% static 'images/Settings.png' %}" alt="설정">
-      <span>My Page</span>
-    </div> {% endcomment %}
     <div class="divider-line"></div>
     <div class="brand-bar">
-      <img src="{% static 'images/bottom_logo.svg' %}" alt="Brand" class="brand-logo">
-      <span class="brand-label">유지니어스</span>
+      <a href="{% url 'mypage' %}" style="display: flex; align-items: center; text-decoration: none;">
+        <img src="{% static 'images/bottom_logo.svg' %}" alt="Brand" class="brand-logo">
+        <span class="brand-label">유지니어스</span>
+      </a>
       <a href="#" class="brand-link tooltip" title="로그아웃">
         <span class="tooltip-text">로그아웃</span>
         <img src="{% static 'images/logout.svg' %}" alt="로그아웃">
