--- a/senpick/app/templates/profile/profile_info.html
+++ b/senpick/app/templates/profile/profile_info.html
@@ -63,7 +63,7 @@
 
                   <label>직업</label>
                   <div class="job-input">
-                    <input type="text" value="학생/취준생">
+                    <input type="text" value="학생/취준생" spellcheck="false">
                     <img src="{% static 'images/bottom_arrow.svg' %}" alt="드롭다운 화살표">
                   </div>
 
