update css html

--- a/senpick/app/templates/birth.html
+++ b/senpick/app/templates/birth.html
@@ -28,7 +28,7 @@
             </section>
             <section class="snap-section animate-on-scroll" style="text-align: center;">
                 <h2>당신의 오늘이 더 특별하길 <span class="font-b">Senpick</span>이 응원해요!</h2>
-                <button class="yellow-btn" onclick="location.href=`{% url 'chat' %}`" style="margin-bottom:200px;"><span class="font-b">Happy Birthday!</span></button>
+                <button class="yellow-btn" onclick="location.href=`{% url 'chat' %}`" style="margin-bottom:200px; margin-top:16px;"><span class="font-b">Happy Birthday!</span></button>
             </section>
         </div>
         <div id="scroll-indicator" class="scroll-arrow">
