--- a/senpick/static/css/birth.css
+++ b/senpick/static/css/birth.css
@@ -87,6 +87,15 @@
     justify-content: center;
     align-items: center;
     margin: 80px 0;
+    height: 60vh; /* 원하는 높이로 조절 */
+    overflow: hidden;
+}
+
+.birth-inner-container .img-wrapper img {
+    height: 100%;       /* 부모 높이에 맞춤 */
+    width: auto;        /* 비율 유지 */
+    display: block;
+    object-fit: contain; /* 비율 유지하면서 전체 보이게 */
 }
 
 .snap-container {
