--- a/senpick/app/templates/profile/profile_password_confirm.html
+++ b/senpick/app/templates/profile/profile_password_confirm.html
@@ -22,13 +22,13 @@
           <div class="profile-main-wrapper" style="padding-top: 0; align-self: center;">
             <div class="center-card-container">
                   <div class="modal-card">
-                    <h1>그동안 <span class="font-b">Senpick</span>과 함께해주셔서 감사합니다 :)</h1>
-                    <p>언제든 다시 찾아주세요</p>
+                    <h1>새 비밀번호가 설정되었어요.</h1>
+                    <p>새로운 비밀번호로 새롭게 로그인해주세요.</p>
                     <div class="img-wrapper">
                       <img src="{% static 'images/delete_confirm.png' %}" alt="하트 아이콘" class="heart-icon" width="500">
                     </div>
                     <div class="modal-buttons">
-                      <button class="cancel-btn" onclick="location.href=`{% url 'login' %}`">센픽 홈으로 가기</button>
+                      <button class="cancel-btn" onclick="location.href=`{% url 'login' %}`">로그인 하기</button>
                     </div>
                   </div>
                 </div>
