--- a/senpick/static/css/mypage.css
+++ b/senpick/static/css/mypage.css
@@ -21,18 +21,20 @@ body {
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
+  overflow-y: scroll;
 }
 
 .mypage-title {
   font-size: 32px;
   font-weight: bold;
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 }
 
 .mypage-subtitle {
   font-size: 18px;
   color: #666;
-  margin-bottom: 32px;
+  margin-top: 0;
+  margin-bottom: 40px;
 }
 
 .mypage-grid {
@@ -127,7 +129,8 @@ body {
   padding: 4px 10px;
   border-radius: 10px;
   font-size: 12px;
-  color: #666;
+  /* color: #666; */
+  color: #2E2E2E;
 }
 
 a {
