--- a/senpick/static/css/profile_delete.css
+++ b/senpick/static/css/profile_delete.css
@@ -4,7 +4,7 @@
 .modal-card {
   background: #fff;
   border-radius: 16px;
-  box-shadow: 0 4px 32px rgba(0,0,0,0.1);
+  /* box-shadow: 0 4px 32px rgba(0,0,0,0.1); */
   padding: 32px 24px;
   display: flex;
   flex-direction: column;
@@ -81,6 +81,7 @@
   font-size: 15px;
   cursor: pointer;
   transition: background 0.15s;
+  height: 45px;
 }
 .modal-buttons .cancel-btn:hover {
   background: #FFE900;
