--- a/senpick/static/css/profile_info.css
+++ b/senpick/static/css/profile_info.css
@@ -1,8 +1,9 @@
 /* ===== profile_info.css ===== */
 .profile-main-wrapper {
     flex-grow: 1;
-    padding-top: 150px;
+    padding: 150px 0;
     overflow-y: scroll;
+    scrollbar-width: none;
 }
 .profile-main {
   flex-grow: 1;
@@ -270,9 +271,11 @@
 
 .job-input img {
   position: absolute;
+  top: 16px;
   right: 12px;
   width: 16px;
   height: 16px;
+  cursor: pointer;
 }
 
 .job-dropdown {
@@ -302,15 +305,14 @@
   background-color: #F4F4F4;
 }
 
-
 .submit-button {
   margin-top: 40px;
   padding: 14px;
   width: 100%;
   font-size: 16px;
-  font-weight: bold;
+  /* font-weight: bold; */
   color: black;
-  background-color: #f0f0f0;
+  background-color: #F5F5F8;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -320,10 +322,10 @@
 
 .submit-button button {
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #F5F5F8;
   border: none;
   border-radius: 12px;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 15px;
   cursor: pointer;
   transition: background-color 0.2s ease;
