--- a/senpick/static/css/login.css
+++ b/senpick/static/css/login.css
@@ -8,24 +8,27 @@ html, body {
 }
 
 .zoom-wrapper {
-  height: 1080px;
-  transform: scale(0.8);
-  transform-origin: top left;
+  /* height: 1080px; */
+  /* transform: scale(0.8); */
+  /* transform-origin: top left; */
 }
 
 .background {
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
   background-color: #FFFDE7;
   position: relative;
   /* overflow: hidden; */
+  display: flex;
+  overflow: hidden;;
 }
 
 /* 왼쪽 카드 배경 */
 .left-card {
-  position: absolute;
-  width: 844px;
-  height: 1025px;
+  /* position: absolute; */
+  width: 50%;
+  min-width: 800px;
+  height: 100vh;
   left: 26px;
   top: 27px;
   background: #fff;
@@ -36,17 +39,31 @@ html, body {
 
 /* 로고 */
 .logo {
-  position: absolute;
-  width: 148px;
+  /* position: absolute; */
+  /* width: 148px;
   height: 42px;
   left: 51px;
-  top: 53px;
+  top: 53px; */
+  padding: 25px;
+  height: 42px;;
   z-index: 2;
+}
+
+.login-wrapper {
+  /* position: absolute; */
+  /* top: 368px;
+  left: 185px; */
+  width: 526px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px; /* 요소 간 기본 간격 */
+  z-index: 2;
+  margin: 0 auto; /* 중앙 정렬 */
 }
 
 /* 제목 */
 .main-title {
-  position: absolute;
+  /* position: absolute; */
   /* width: 478px; */
   height: 44px;
   left: 207px;
@@ -60,7 +77,7 @@ html, body {
 
 /* 설명 */
 .sub-title {
-  position: absolute;
+  /* position: absolute; */
   /* width: 338px; */
   height: 30px;
   left: 279px;
@@ -68,16 +85,6 @@ html, body {
 /*   top: 255px; */
   font-size: 20px;
   color: #666;
-  z-index: 2;
-}
-.login-wrapper {
-  position: absolute;
-  top: 368px;
-  left: 185px;
-  width: 526px;
-  display: flex;
-  flex-direction: column;
-  gap: 25px; /* 요소 간 기본 간격 */
   z-index: 2;
 }
 
@@ -235,7 +242,7 @@ input.error#password + .error-message ~ .login-btn {
 } */
 
 .social-login {
-  position: absolute;
+  /* position: absolute; */
   top: 466px; /* 위치 고정 */
   /* left: 185px; */
   display: flex;
@@ -258,7 +265,7 @@ input.error#password + .error-message ~ .login-btn {
   margin-top: 73px;
 } */
 .link-row {
-  position: absolute;
+  /* position: absolute; */
   top: 594px; /* 위치 고정 */
   display: flex;
   justify-content: center;
