--- a/senpick/app/templates/layout/sidebar.html
+++ b/senpick/app/templates/layout/sidebar.html
@@ -37,7 +37,7 @@
         <img src="{% static 'images/bottom_logo.svg' %}" alt="Brand" class="brand-logo">
         <span class="brand-label">유지니어스</span>
       </a>
-      <a href="#" class="brand-link tooltip" title="로그아웃">
+      <a href="{% url 'login' %}" class="brand-link tooltip" title="로그아웃">
         <span class="tooltip-text">로그아웃</span>
         <img src="{% static 'images/logout.svg' %}" alt="로그아웃">
       </a>
