--- a/senpick/app/templates/mypage.html
+++ b/senpick/app/templates/mypage.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="display: flex;" class="layout">
-        {% include "sidebar.html" %}
+        {% include 'layout/sidebar.html' %}
 
         <div class="mypage-container">
             <h1 class="mypage-title">My Page</h1>
