--- a/senpick/app/templates/login.html
+++ b/senpick/app/templates/login.html
@@ -17,56 +17,56 @@
   <script src="{% static 'js/login.js' %}" defer></script>
 </head>
 <body>
-  <div class="zoom-wrapper">
-    <div class="background">
-      <!-- 왼쪽 카드 -->
-      <div class="left-card">
-        <!-- 절대 위치 요소들 -->
-        <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
-        <!-- 기존 위치 -->
+  <div class="background">
+    <!-- 왼쪽 카드 -->
+    <div class="left-card">
+      <!-- 절대 위치 요소들 -->
+      <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
+      <!-- 기존 위치 -->
+      <div class="outer-wrapper">
         <div class="login-wrapper">      {% comment %} <div class="form-block"> {% endcomment %}
-          <div>
-            <h2 class="main-title">어떤 선물을 해야할 지 고민이신가요?</h2>
-            <p class="sub-title">센스의 정답 센픽, 모든 순간엔 센픽하세요.</p>
-          </div>
-          <form method="post" action="{% url 'login' %}" class="login-form">
-            {% csrf_token %}
-            <div class="input-group"  id="email-group">
-              <input type="email" name="username" id="email" placeholder="이메일 입력" required>
-              <div class="error-message" id="email-error">이메일을 입력해주세요.</div>
-            </div>
-          
-            <div class="input-group" id="password-group">
-              <input type="password" name="password" id="password" placeholder="비밀번호 입력" required>
-              <div class="error-message" id="password-error">비밀번호를 입력해주세요.</div>
-            </div>
-          
-            <button type="submit" class="login-btn">로그인</button>
-          </form>
-        
-          <div class="or-group">
-            <div class="line-left"></div>
-            <div class="or-text">Or</div>
-            <div class="line-right"></div>
+        <div>
+          <h2 class="main-title">어떤 선물을 해야할 지 고민이신가요?</h2>
+          <p class="sub-title">센스의 정답 센픽, 모든 순간엔 센픽하세요.</p>
+        </div>
+        <form method="post" action="{% url 'login' %}" class="login-form">
+          {% csrf_token %}
+          <div class="input-group"  id="email-group">
+            <input type="email" name="username" id="email" placeholder="이메일 입력" required>
+            <div class="error-message" id="email-error">이메일을 입력해주세요.</div>
           </div>
         
-          <button class="guest-btn" onclick="location.href=`{% url 'chat' %}`">비회원으로 시작하기</button>
-          
-          <div class="social-login">
-            <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인">
-            <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인">
-            <img src="{% static 'images/naver_login.svg' %}" alt="네이버 로그인">
+          <div class="input-group" id="password-group">
+            <input type="password" name="password" id="password" placeholder="비밀번호 입력" required>
+            <div class="error-message" id="password-error">비밀번호를 입력해주세요.</div>
           </div>
         
-          <div class="link-row">
-            <a href="{% url 'pswd' %}" class="find-password">비밀번호 찾기</a>
-            <a href="{% url 'signup_step1' %}" class="signup">회원가입</a>
-          </div>
+          <button type="submit" class="login-btn">로그인</button>
+        </form>
+      
+        <div class="or-group">
+          <div class="line-left"></div>
+          <div class="or-text">Or</div>
+          <div class="line-right"></div>
+        </div>
+      
+        <button class="guest-btn" onclick="location.href=`{% url 'chat' %}`">비회원으로 시작하기</button>
+        
+        <div class="social-login">
+          <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인">
+          <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인">
+          <img src="{% static 'images/naver_login.svg' %}" alt="네이버 로그인">
+        </div>
+      
+        <div class="link-row">
+          <a href="{% url 'pswd' %}" class="find-password">비밀번호 찾기</a>
+          <a href="{% url 'signup_step1' %}" class="signup">회원가입</a>
+        </div>
         </div>
       </div>
-      <!-- 슬라이드 포함 -->
-      {% include "slide.html" %}
     </div>
+    <!-- 슬라이드 포함 -->
+    {% include "slide.html" %}
   </div>
 </body>
 </html>
