--- a/senpick/app/templates/slide.html
+++ b/senpick/app/templates/slide.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class='right-slide' style="z-index: 0;">
+<div class='right-slide'>
   <div class='slider-wrapper' id='slider'>
     <div class='slide-content slide-1'>
       <h2><span class='font-a'>“무슨 선물을 해야 할까?” <br>그 고민, </span><span class='font-b'>Senpick</span><span class='font-a'>이 줄여줄게요.</span></h2>
@@ -47,10 +47,7 @@
       </h2>
       <img src="{% static 'images/slide_5.png' %}" alt="Slide 5">
     </div>
-
-
   </div>
-
   <div class="slide-indicator">
     <span class="dot active"></span>
     <span class="dot"></span>
