--- a/senpick/static/css/login.css
+++ b/senpick/static/css/login.css
@@ -7,53 +7,49 @@ html, body {
   position: relative;
 }
 
-.zoom-wrapper {
-  /* height: 1080px; */
-  /* transform: scale(0.8); */
-  /* transform-origin: top left; */
-}
-
 .background {
-  /* width: 100vw; */
+  padding: 26px;
   height: 100vh;
   background-color: #FFFDE7;
   position: relative;
-  /* overflow: hidden; */
   display: flex;
-  overflow: hidden;;
+  overflow: hidden;
+  
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* 왼쪽 카드 배경 */
 .left-card {
-  /* position: absolute; */
-  width: 50%;
-  min-width: 800px;
-  height: 100vh;
-  left: 26px;
-  top: 27px;
+  min-width: 600px;
+  height: calc(100vh - 52px);
   background: #fff;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
   z-index: 1;
+  flex: 1;
 }
 
 /* 로고 */
 .logo {
-  /* position: absolute; */
-  /* width: 148px;
-  height: 42px;
-  left: 51px;
-  top: 53px; */
+  box-sizing: content-box;
   padding: 25px;
-  height: 42px;;
+  height: 42px;
   z-index: 2;
 }
 
+.outer-wrapper {
+  display: flex;
+  justify-content: center;    /* 가로 정렬 */
+  align-items: center;        /* 세로 정렬 */
+  height: calc(100% - 152px)            /* 화면 전체 높이 */
+}
+
 .login-wrapper {
-  /* position: absolute; */
-  /* top: 368px;
-  left: 185px; */
-  width: 526px;
+  padding: 0 150px;
   display: flex;
   flex-direction: column;
   gap: 25px; /* 요소 간 기본 간격 */
@@ -63,12 +59,7 @@ html, body {
 
 /* 제목 */
 .main-title {
-  /* position: absolute; */
-  /* width: 478px; */
   height: 44px;
-  left: 207px;
-  top: 234px;
-/*   top: 199px; */
   font-size: 32px;
   font-weight: 700;
   color: #222;
@@ -77,22 +68,11 @@ html, body {
 
 /* 설명 */
 .sub-title {
-  /* position: absolute; */
-  /* width: 338px; */
   height: 30px;
-  left: 279px;
-  top: 290px;
-/*   top: 255px; */
   font-size: 20px;
   color: #666;
   z-index: 2;
 }
-
-/* .form-block {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-} */
 
 .login-form {
   display: flex;
@@ -121,7 +101,7 @@ input[name="password"] {
 }
 
 /* input.error {
-border: 1.5px solid #EB1C24;
+  border: 1.5px solid #EB1C24;
 } */
 
 /* 기본 마진 설정 */
@@ -150,6 +130,7 @@ input.error#password + .error-message ~ .login-btn {
   font-size: 14px;
   color: red;
   display: none;
+  /* visibility: hidden; */
   margin-top: 2px;
 /*   margin-top: 6px; */
 }
@@ -215,40 +196,10 @@ input.error#password + .error-message ~ .login-btn {
   color: #E0E0E0;
 }
 
-/* .social-login {
-  display: flex;
-  justify-content: center;
-  gap: 65px;
-}
-
-.social-login img {
-  width: 48px;
-  height: 48px;
-  cursor: pointer;
-}
-
-.link-row {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-} */
-
-/* .social-login {
-  display: flex;
-  justify-content: center;
-  gap: 65px;
-
-  margin-top: 45px;
-} */
-
 .social-login {
-  /* position: absolute; */
-  top: 466px; /* 위치 고정 */
-  /* left: 185px; */
   display: flex;
   justify-content: center;
   gap: 65px;
-  width: 526px;
 }
 
 .social-login img {
@@ -265,12 +216,9 @@ input.error#password + .error-message ~ .login-btn {
   margin-top: 73px;
 } */
 .link-row {
-  /* position: absolute; */
-  top: 594px; /* 위치 고정 */
   display: flex;
   justify-content: center;
   gap: 30px;
-  width: 526px;
 }
 
 .find-password,
