--- a/senpick/static/css/stepper.css
+++ b/senpick/static/css/stepper.css
@@ -63,10 +63,10 @@ body {
 
 /* 옵션 리스트 */
 .step-options {
-  /* margin-bottom: 14px; */
+  margin-bottom: 14px;
   display: flex;
   flex-direction: column;
-  /* gap: 8px; */
+  gap: 8px;
 }
 
 /* 옵션(체크/라벨) */
