--- a/senpick/app/templates/layout/sidebar.html
+++ b/senpick/app/templates/layout/sidebar.html
@@ -106,7 +106,7 @@
   let loginState = true; // 로그인 상태를 나타내는 변수
   let brandLink = document.querySelector('.brand-link');
   brandLink.addEventListener('click', function(e) {
-    e.preventDefault();
+    // e.preventDefault();
     let brandBar = document.querySelector('.brand-bar');
     if (loginState) {
       // 로그아웃 처리
